SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

ADD_EXECUTABLE(usingTYPE usingTYPE.cpp)
ADD_EXECUTABLE(Functemplate Functemplate.cpp)
ADD_EXECUTABLE(classtest classtest.cpp)
ADD_EXECUTABLE(newinit newinit.cpp)
ADD_EXECUTABLE(namespace namespace.cpp)
ADD_EXECUTABLE(const const.cpp)
ADD_EXECUTABLE(operator operator.cpp)
ADD_EXECUTABLE(12testmain 12testmain.cpp stringpractice.cpp)
ADD_EXECUTABLE(13inheritance 13inheritance.cpp 13baseclass.cpp 13derivedclass.cpp)
ADD_EXECUTABLE(abnormal abnormal.cpp)
ADD_EXECUTABLE(typeconvert typeconvert.cpp)
ADD_EXECUTABLE(string_test string_test.cpp)
ADD_EXECUTABLE(iterator iterator.cpp)
ADD_EXECUTABLE(right_reference right_reference.cpp)
ADD_EXECUTABLE(stl_allocator stl_allocator.cpp)
ADD_EXECUTABLE(stl_iterator stl_iterator.cpp)
ADD_EXECUTABLE(syntax_test syntax_test.cpp)
